se quitan imagenes

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="container">
           <div class="row">
             <div class="col-sm-6 col-md-6">
-              <p class="bold text-left">Biemvenidos a tucompraenusa.com </p>
+              <p class="bold text-left">Bienvenidos a tucompraenusa.com </p>
             </div>
             <div class="col-sm-6 col-md-6">
               <p class="bold text-right">Contáctanos +1 81 3328 0208</p>
@@ -331,7 +331,7 @@
                 <li class="cbp-item psychiatrist">
                   <a href="doctors/member1.html" class="cbp-caption cbp-singlePage">
                     <div class="cbp-caption-defaultWrap">
-                      <img src="img/team/1.jpg" alt="" width="100%">
+                      <img src="img/team/" alt="" width="100%">
                     </div>
                     <div class="cbp-caption-activeWrap">
                       <div class="cbp-l-caption-alignCenter">
@@ -347,7 +347,7 @@
                 <li class="cbp-item cardiologist">
                   <a href="doctors/member2.html" class="cbp-caption cbp-singlePage">
                     <div class="cbp-caption-defaultWrap">
-                      <img src="img/team/2.jpg" alt="" width="100%">
+                      <img src="img/team/" alt="" width="100%">
                     </div>
                     <div class="cbp-caption-activeWrap">
                       <div class="cbp-l-caption-alignCenter">
@@ -363,7 +363,7 @@
                 <li class="cbp-item cardiologist">
                   <a href="doctors/member3.html" class="cbp-caption cbp-singlePage">
                     <div class="cbp-caption-defaultWrap">
-                      <img src="img/team/3.jpg" alt="" width="100%">
+                      <img src="img/team" alt="" width="100%">
                     </div>
                     <div class="cbp-caption-activeWrap">
                       <div class="cbp-l-caption-alignCenter">
@@ -379,7 +379,7 @@
                 <li class="cbp-item neurologist">
                   <a href="doctors/member4.html" class="cbp-caption cbp-singlePage">
                     <div class="cbp-caption-defaultWrap">
-                      <img src="img/team/4.jpg" alt="" width="100%">
+                      <img src="img/team/" alt="" width="100%">
                     </div>
                     <div class="cbp-caption-activeWrap">
                       <div class="cbp-l-caption-alignCenter">
@@ -411,8 +411,8 @@
           <div class="col-lg-8 col-lg-offset-2">
             <div class="wow fadeInDown" data-wow-delay="0.1s">
               <div class="section-heading text-center">
-                <h2 class="h-bold">Casillero</h2>
-                <p>Seccion de trabajo/p>
+                <h2 class="h-bold">Ofertas</h2>
+                <p>Afiliaciones amazon pryme - otras</p>
               </div>
             </div>
             <div class="divider-short"></div>
