--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="container">
           <div class="row">
             <div class="col-sm-6 col-md-6">
-                            <p class="bold text-left">Bienvenidos a tucompraenusa.com </p>
+                 <p class="bold text-left">Bienvenidos a tucompraenusa.com </p>
             </div>
             <div class="col-sm-6 col-md-6">
               <p class="bold text-right">      Contáctanos +1 81 3328 0208</p>
@@ -44,7 +44,7 @@
           </div>
         </div>
       </div>
-      <a class="navbar-brand" href="index.html">
+      <a class="pull-left" href="index.html">
         <img src="img/logo VyB 300x300.png" alt="" width="100" height="100" />
       </a>
       <div class="container navigation">
