--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                  <p class="bold text-left">Bienvenidos a tucompraenusa.com </p>
             </div>
             <div class="col-sm-6 col-md-6">
-              <p class="bold text-right">      Contáctanos +1 81 3328 0208</p>
+              <p class="bold text-right">      Contáctanos +1 (813) 328 0208</p>
             </div>
           </div>
         </div>
@@ -461,14 +461,14 @@
                       <ins class="ab zmin sprite sprite-i-triangle block"></ins>
                     </div>
                     <div class="person-text rel text-light">
-                      <img src="img/testimonials/1.jpg" alt="" class="person img-circle" />
+                      <img src="img/testimonials/" alt="" class="person img-circle" />
                       <a title="" href="#">Amazon</a>
                       <span>Amazon prime</span>
                     </div>
                   </div>
                   <div class="col-md-4 col-sm-6 hidden-xs">
                     <div class="block-text rel zmin">
-                      <a title="" href="#">Walmakmart/a>
+                      <a title="" href="#">Walmart </a>
                       <div class="mark">My rating: <span class="rating-input"><span data-value="0" class="glyphicon glyphicon-star"></span><span data-value="1" class="glyphicon glyphicon-star"></span><span data-value="2" class="glyphicon glyphicon-star-empty"></span>
                         <span
                           data-value="3" class="glyphicon glyphicon-star-empty"></span><span data-value="4" class="glyphicon glyphicon-star-empty"></span><span data-value="5" class="glyphicon glyphicon-star-empty"></span> </span>
@@ -477,14 +477,14 @@
                       <ins class="ab zmin sprite sprite-i-triangle block"></ins>
                     </div>
                     <div class="person-text rel text-light">
-                      <img src="img/testimonials/2.jpg" alt="" class="person img-circle" />
-                      <a title="" href="#">Walmakmart G</a>
-                      <span>servicio Walmakmart</span>
+                      <img src="img/testimonials/" alt="" class="person img-circle" />
+                      <a title="" href="#">Walmart</a>
+                      <span>servicio Walmart</span>
                     </div>
                   </div>
                   <div class="col-md-4 col-sm-6 hidden-sm hidden-xs">
                     <div class="block-text rel zmin">
-                      <a title="" href="#">Medical consultation</a>
+                      <a title="" href="#">titulo </a>
                       <div class="mark">My rating: <span class="rating-input"><span data-value="0" class="glyphicon glyphicon-star"></span><span data-value="1" class="glyphicon glyphicon-star"></span><span data-value="2" class="glyphicon glyphicon-star"></span><span data-value="3"
                           class="glyphicon glyphicon-star"></span><span data-value="4" class="glyphicon glyphicon-star"></span><span data-value="5" class="glyphicon glyphicon-star"></span> </span>
                       </div>
@@ -492,7 +492,7 @@
                       <ins class="ab zmin sprite sprite-i-triangle block"></ins>
                     </div>
                     <div class="person-text rel text-light">
-                      <img src="img/testimonials/3.jpg" alt="" class="person img-circle" />
+                      <img src="img/testimonials/" alt="" class="person img-circle" />
                       <a title="" href="#">Nombre</a>
                       <span>Direccion</span>
                     </div>
@@ -501,7 +501,7 @@
                 <div class="item">
                   <div class="col-md-4 col-sm-6">
                     <div class="block-text rel zmin">
-                      <a title="" href="#">Birth control pills</a>
+                      <a title="" href="#">titulo</a>
                       <div class="mark">My rating: <span class="rating-input"><span data-value="0" class="glyphicon glyphicon-star"></span><span data-value="1" class="glyphicon glyphicon-star"></span><span data-value="2" class="glyphicon glyphicon-star"></span><span data-value="3"
                           class="glyphicon glyphicon-star"></span><span data-value="4" class="glyphicon glyphicon-star-empty"></span><span data-value="5" class="glyphicon glyphicon-star-empty"></span> </span>
                       </div>
@@ -509,14 +509,14 @@
                       <ins class="ab zmin sprite sprite-i-triangle block"></ins>
                     </div>
                     <div class="person-text rel text-light">
-                      <img src="img/testimonials/4.jpg" alt="" class="person img-circle" />
+                      <img src="img/testimonials/" alt="" class="person img-circle" />
                       <a title="" href="#">Nombre</a>
                       <span>Direccion</span>
                     </div>
                   </div>
                   <div class="col-md-4 col-sm-6 hidden-xs">
                     <div class="block-text rel zmin">
-                      <a title="" href="#">Radiology</a>
+                      <a title="" href="#">titulo</a>
                       <div class="mark">My rating: <span class="rating-input"><span data-value="0" class="glyphicon glyphicon-star"></span><span data-value="1" class="glyphicon glyphicon-star"></span><span data-value="2" class="glyphicon glyphicon-star-empty"></span>
                         <span
                           data-value="3" class="glyphicon glyphicon-star-empty"></span><span data-value="4" class="glyphicon glyphicon-star-empty"></span><span data-value="5" class="glyphicon glyphicon-star-empty"></span> </span>
@@ -525,14 +525,14 @@
                       <ins class="ab zmin sprite sprite-i-triangle block"></ins>
                     </div>
                     <div class="person-text rel text-light">
-                      <img src="img/testimonials/5.jpg" alt="" class="person img-circle" />
+                      <img src="img/testimonials/" alt="" class="person img-circle" />
                       <a title="" href="#">Nombre</a>
                       <span>Direccion</span>
                     </div>
                   </div>
                   <div class="col-md-4 col-sm-6 hidden-sm hidden-xs">
                     <div class="block-text rel zmin">
-                      <a title="" href="#">Cervical Lesions</a>
+                      <a title="" href="#">titulo</a>
                       <div class="mark">My rating: <span class="rating-input"><span data-value="0" class="glyphicon glyphicon-star"></span><span data-value="1" class="glyphicon glyphicon-star"></span><span data-value="2" class="glyphicon glyphicon-star"></span><span data-value="3"
                           class="glyphicon glyphicon-star"></span><span data-value="4" class="glyphicon glyphicon-star"></span><span data-value="5" class="glyphicon glyphicon-star"></span> </span>
                       </div>
@@ -540,7 +540,7 @@
                       <ins class="ab zmin sprite sprite-i-triangle block"></ins>
                     </div>
                     <div class="person-text rel text-light">
-                      <img src="img/testimonials/6.jpg" alt="" class="person img-circle" />
+                      <img src="img/testimonials/" alt="" class="person img-circle" />
                       <a title="" href="#">Nombre</a>
                       <span>Direccion</span>
                     </div>
