coambios de textos

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <i class="fa fa-signal fa-3x circled bg-skin"></i>
                 <h4 class="h-bold">Compra asistida</h4>
                 <p>
-                  sobre compra asistida
+                  Sobre compra asistida
                 </p>
               </div>
             </div>
@@ -147,7 +147,7 @@
                 <i class="fa fa-plane fa-3x circled bg-skin"></i>
                 <h4 class="h-bold">Envíos internacionales</h4>
                 <p>
-                  sobre envios
+                  Sobre envios
                 </p>
               </div>
             </div>
@@ -159,7 +159,7 @@
                 <i class="fa fa-location-arrow fa-3x circled bg-skin"></i>
                 <h4 class="h-bold">Tienda física</h4>
                 <p>
-                  sobre tienda
+                  Sobre tienda
                 </p>
               </div>
             </div>
@@ -187,7 +187,7 @@
                      <img src="img/dummy/laptop.png" class="img-responsive" alt="" />
                       <div class="wow lightSpeedIn" data-wow-delay="0.1s">
                         <div class="cta-btn">
-                         <a href="#" class="btn btn-skin btn-lg"> saber mas</a>
+                         <a href="#" class="btn btn-skin btn-lg"> Saber mas</a>
                         </div>
                       </div>
                     </div>
@@ -220,8 +220,8 @@
                   <span class="fa fa-video-camera fa-3x"></span>
                 </div>
                 <div class="service-desc">
-                  <h5 class="h-light">contacto necesidades</h5>
-                  <p>necesidades.</p>
+                  <h5 class="h-light">Contacto y Necesidades</h5>
+                  <p>Necesidades.</p>
                 </div>
               </div>
             </div>
@@ -232,8 +232,8 @@
                   <span class="fa fa-file-text fa-3x"></span>
                 </div>
                 <div class="service-desc">
-                  <h5 class="h-light">precios y ofertas</h5>
-                  <p>lista precios 24h despues</p>
+                  <h5 class="h-light">Precios y Ofertas</h5>
+                  <p>Lista precios 24h despues</p>
                 </div>
               </div>
             </div>
@@ -243,8 +243,8 @@
                   <span class="fa fa-qrcode fa-3x"></span>
                 </div>
                 <div class="service-desc">
-                  <h5 class="h-light">acuerdo metodo de pago</h5>
-                  <p>acuerdo metodo de pago</p>
+                  <h5 class="h-light">Acuerdo Metodo de Pago</h5>
+                  <p>Acuerdo metodo de pago</p>
                 </div>
               </div>
             </div>
@@ -259,8 +259,8 @@
                   <span class="fa fa-clock-o fa-3x"></span>
                 </div>
                 <div class="service-desc">
-                  <h5 class="h-light">acuerdo de horario</h5>
-                  <p>video llamada fotos mensajes</p>
+                  <h5 class="h-light">Acuerdo de Horario</h5>
+                  <p>Video llamada y fotos</p>
                 </div>
               </div>
             </div>
@@ -271,8 +271,8 @@
                   <span class="fa fa-inbox fa-3x"></span>
                 </div>
                 <div class="service-desc">
-                  <h5 class="h-light">preparamos el paquete</h5>
-                  <p>medidas de seguridad.</p>
+                  <h5 class="h-light">Preparamos el Paquete</h5>
+                  <p>Medidas de seguridad.</p>
                 </div>
               </div>
             </div>
@@ -282,8 +282,8 @@
                   <span class="fa fa-dropbox fa-3x"></span>
                 </div>
                 <div class="service-desc">
-                  <h5 class="h-light">entrega o retiro</h5>
-                  <p>entrega o retiro.</p>
+                  <h5 class="h-light">Entrega o Retiro</h5>
+                  <p>Entrega o retiro.</p>
                 </div>
               </div>
             </div>
@@ -342,8 +342,8 @@
                       </div>
                     </div>
                   </a>
-                  <a href="https://www.victoriassecret.com/us/" class="cbp-l-grid-team-name">Victoria Secret</a>
-                  <div class="cbp-l-grid-team-position">lenceria</div>
+                  <a href="https://www.victoriassecret.com/us/" class="cbp-l-grid-team-name">Victoria's Secret</a>
+                  <div class="cbp-l-grid-team-position">Lenceria</div>
                 </li>
                 <li class="cbp-item general">
                   <a href="https://www.walmart.com/us/" class="cbp-caption ">
@@ -358,8 +358,8 @@
                       </div>
                     </div>
                   </a>
-                  <a href="https://www.walmart.com/us/" class=" cbp-l-grid-team-name">Walmakmart</a>
-                  <div class="cbp-l-grid-team-position">general</div>
+                  <a href="https://www.walmart.com/us/" class=" cbp-l-grid-team-name">Walmart</a>
+                  <div class="cbp-l-grid-team-position">General</div>
                 </li>
                 <li class="cbp-item ropa">
                   <a href="https://www.adidas.com/us" class="cbp-caption">
@@ -375,7 +375,7 @@
                     </div>
                   </a>
                   <a href="https://www.adidas.com/us" class="cbp-l-grid-team-name">Adidas</a>
-                  <div class="cbp-l-grid-team-position">ropa</div>
+                  <div class="cbp-l-grid-team-position">Ropa</div>
                 </li>
                 <li class="cbp-item ropa">
                   <a href="https://www.nike.com/us/" class="cbp-caption">
@@ -391,7 +391,7 @@
                     </div>
                   </a>
                   <a href="https://www.nike.com/us/" class="cbp-singlePage cbp-l-grid-team-name">Nike</a>
-                  <div class="cbp-l-grid-team-position">ropa</div>
+                  <div class="cbp-l-grid-team-position">Ropa</div>
                 </li>
                 <li class="cbp-item ropa">
                   <a href="https://www.guess.com/us/en/home" class="cbp-caption">
@@ -407,7 +407,7 @@
                     </div>
                   </a>
                   <a href="https://www.guess.com/us/en/home" class="cbp-l-grid-team-name">Guess</a>
-                  <div class="cbp-l-grid-team-position">ropa</div>
+                  <div class="cbp-l-grid-team-position">Ropa</div>
                 </li>
                 <li class="cbp-item general">
                   <a href="https://www.amazon.com/-/es/" class="cbp-caption">
@@ -423,7 +423,7 @@
                     </div>
                   </a>
                   <a href="https://www.amazon.com/-/es/" class="cbp-l-grid-team-name">Amazon</a>
-                  <div class="cbp-l-grid-team-position">general</div>
+                  <div class="cbp-l-grid-team-position">General</div>
                 </li>
 
               </ul>
